--- a/auth_config.json
+++ b/auth_config.json
@@ -1,4 +1,6 @@
 {
     "domain": "jordan-b.eu.auth0.com",
-    "clientId": "sbAR0wPip7xjyUt1RZ4U8LFfaXOgAAIT"
+    "clientId": "sbAR0wPip7xjyUt1RZ4U8LFfaXOgAAIT",
+    "audience": "https://jb-api.example.com",
+    "serverUrl": "http://localhost:8080"
 }
